--- a/public/home/styles/Order3.css
+++ b/public/home/styles/Order3.css
@@ -75,13 +75,6 @@ select optgroup{
 	font-weight:bold;
 	font:120% Microsoft YaHei, 微软雅黑, SimSun, 宋体, Arial, Verdana;
 }
-.order dl dd.smsverify input.button{
-	border:none;
-	cursor:pointer;
-	color:#FFF;
-	font-weight:bold;
-	font:100% Microsoft YaHei, 微软雅黑, SimSun, 宋体, Arial, Verdana;
-}
 .order dl dd.submit img{
 	cursor:pointer;
 }
@@ -120,4 +113,20 @@ select optgroup{
 	font-size:24px;
 	background:#fc4400 url(../images/cart.png) no-repeat scroll 5px center / 40px 40px;
 	color:#FFF;
+}
+
+.tip{
+	width:480px;
+	max-width:80%;
+	background:rgba(50,50,51,.88);
+	transform:translate3d(-50%,-50%,0);
+	padding:16px;
+	color:#fff;
+	text-align:center;
+	border-radius:4px;
+	position:fixed;
+	top:50%;
+	left:50%;
+	display:none;
+	font-family:"宋体";
 }
