--- a/public/home/styles/Order4.css
+++ b/public/home/styles/Order4.css
@@ -78,14 +78,6 @@ select optgroup{
 	font-weight:bold;
 	font-size:120%;
 }
-.order dl dd.smsverify input.button{
-	height:40px;
-	border:none;
-	cursor:pointer;
-	color:#FFF;
-	font-weight:bold;
-	font-size:100%;
-}
 .order dl dd.submit img{
 	cursor:pointer;
 }
@@ -107,4 +99,20 @@ select optgroup{
 }
 .order dl dd.captcha img{
 	cursor:pointer;
+}
+
+.tip{
+	width:480px;
+	max-width:80%;
+	background:rgba(50,50,51,.88);
+	transform:translate3d(-50%,-50%,0);
+	padding:16px;
+	color:#fff;
+	text-align:center;
+	border-radius:4px;
+	position:fixed;
+	top:50%;
+	left:50%;
+	display:none;
+	font-family:"宋体";
 }
