--- a/public/home/styles/Order5.css
+++ b/public/home/styles/Order5.css
@@ -93,19 +93,6 @@ select optgroup{
 	box-shadow:0 1px 1px rgba(20,3,5,0.15);
 	border-radius:18px;
 }
-.order dl dd.smsverify{
-	clear:both;
-}
-.order dl dd.smsverify input.button{
-	color:#FFF;
-	cursor:pointer;
-	border:none;
-	padding:0 5px;
-	height:40px;
-	font-size:18px;
-	box-shadow:0 1px 1px rgba(20,3,5,0.15);
-	border-radius:18px;
-}
 .order dl dd.submit img{
 	cursor:pointer;
 }
@@ -131,4 +118,20 @@ select optgroup{
 }
 .order form.search dl dd.center{
 	font-size:20px;
+}
+
+.tip{
+	width:480px;
+	max-width:80%;
+	background:rgba(50,50,51,.88);
+	transform:translate3d(-50%,-50%,0);
+	padding:16px;
+	color:#fff;
+	text-align:center;
+	border-radius:4px;
+	position:fixed;
+	top:50%;
+	left:50%;
+	display:none;
+	font-family:"宋体";
 }
