优化系统中的css代码和js代码、重命名部分字段

--- a/public/admin/styles/Template.css
+++ b/public/admin/styles/Template.css
@@ -12,6 +12,6 @@
 	width:170px;
 }
 
-.form table tr.pid1 select,.form table tr.pid2 select{
+.form table tr.product_ids1 select,.form table tr.product_ids2 select{
 	height:120px;
 }
