--- a/public/base/styles/Basic.css
+++ b/public/base/styles/Basic.css
@@ -6,7 +6,7 @@
 body{
 	margin:10px auto;
 	font-size:14px !important;
-	font-family:"宋体";
+	font-family:"宋体",serif;
 	color:#333;
 }
 ::placeholder{
@@ -125,7 +125,7 @@ div.list{
 	border:1px dotted #deeffb;
 	line-height:180%;
 	font-size:14px;
-	font-family:"宋体";
+	font-family:"宋体",serif;
 }
 p.nothing{
 	text-align:center;
@@ -157,7 +157,7 @@ form.page select{
 .form table tr td{
 	font-size:14px;
 	padding:2px 0 10px 0;
-	font-family:"宋体";
+	font-family:"宋体",serif;
 }
 .form table tr td:nth-child(1){
 	width:70px;
