--- a/public/home/styles/Order3.css
+++ b/public/home/styles/Order3.css
@@ -22,7 +22,7 @@ select optgroup{
 	display:inline-block;
 	text-align:right;
 	padding-right:2%;
-	overflow:;
+	overflow:hidden;
 	vertical-align:top;
 }
 .order dl .attr dd span.right label{
@@ -128,5 +128,5 @@ select optgroup{
 	top:50%;
 	left:50%;
 	display:none;
-	font-family:"宋体";
+	font-family:"宋体",serif;
 }
