--- a/public/home/styles/Order4.css
+++ b/public/home/styles/Order4.css
@@ -13,7 +13,7 @@ select optgroup{
 	min-width:286px;
 	margin:0 10px;
 	font-size:14px;
-	font-family:微软雅黑;
+	font-family:"微软雅黑",serif;
 }
 .order dl dd{
 	line-height:30px;
@@ -114,5 +114,5 @@ select optgroup{
 	top:50%;
 	left:50%;
 	display:none;
-	font-family:"宋体";
+	font-family:"宋体",serif;
 }
