手机版3和手机版4的下单模板中的单选按钮添加边框

--- a/public/home/styles/Order5.css
+++ b/public/home/styles/Order5.css
@@ -24,7 +24,7 @@ select optgroup{
 	display:block;
 	width:100%;
 }
-.order dl dd.pro span.right label,.order dl .attr dd span.right label{
+.order dl dd span.right label{
 	border:1px #ccc solid;
 	border-radius:5px;
 	padding:5px 13px;
