--- a/public/home/styles/Order2.css
+++ b/public/home/styles/Order2.css
@@ -3,9 +3,6 @@
 	margin:0;
 	padding:0;
 }
-select optgroup{
-	font-style:normal;
-}
 .order{
 	width:600px;
 	margin:0 auto;
@@ -68,16 +65,48 @@ select optgroup{
 	font-weight:bold;
 	font:120% Microsoft YaHei, 微软雅黑, SimSun, 宋体, Arial, Verdana;
 }
+.order dl dd.sms_verify input.button{
+	border:none;
+	cursor:pointer;
+	color:#FFF;
+	background:#6EC90F;
+	font-weight:bold;
+	font:100% Microsoft YaHei, 微软雅黑, SimSun, 宋体, Arial, Verdana;
+}
 .order dl dd.submit img{
 	cursor:pointer;
 }
-.order dl dd select{
-	height:25px;
-	font-size:14px;
-	border:1px solid #666;
-}
-.order dl dd.pro select,.order dl #aa select{
+.order dl dd .layui-form-select{
+	margin:0 0 5px 0;
 	width:445px;
+}
+.order dl dd .layui-form-select dl dd.layui-this{
+	background:yellow;
+	color:#423628 !important;
+}
+.order dl dd dl.layui-anim{
+	width:445px;
+	margin:0;
+	top:21px;
+	padding:5px 0;
+	background:#423628;
+	color:yellow;
+}
+.order dl dd .layui-form-selectup dl.layui-anim{
+	top:auto;
+	bottom:17px;
+}
+.order dl dd .layui-form-select dl dd{
+	height:21px;
+	line-height:21px;
+}
+.order dl dd .layui-form-select dl dd:hover{
+	color:#000;
+}
+.order dl dd .layui-input,.order dl dd .layui-select{
+	height:19px;
+	line-height:19px;
+	border-color:#666;
 }
 .order dl dd.info{
 	border:2px solid red;
