--- a/public/home/styles/Order3.css
+++ b/public/home/styles/Order3.css
@@ -37,6 +37,7 @@ select optgroup{
 	width:100%;
 	height:19px;
 	border:1px solid #666;
+	box-sizing:border-box;
 }
 .order dl dd input.text2{
 	width:21.82%;
@@ -75,30 +76,51 @@ select optgroup{
 	font-weight:bold;
 	font:120% Microsoft YaHei, 微软雅黑, SimSun, 宋体, Arial, Verdana;
 }
+.order dl dd.sms_verify input.button{
+	border:none;
+	cursor:pointer;
+	color:#FFF;
+	font-weight:bold;
+	font:100% Microsoft YaHei, 微软雅黑, SimSun, 宋体, Arial, Verdana;
+}
 .order dl dd.submit img{
 	cursor:pointer;
 }
-.order dl dd select{
-	height:25px;
-	font-size:14px;
-	border:1px solid #666;
-}
-.order dl dd.pro select,.order dl #aa select{
+.order dl dd .layui-form-select{
+	margin:0 0 5px 0;
 	width:100%;
 }
-.order dl dd.info{
-	border:2px solid red;
-	text-align:center;
-	width:95%;
-	margin:0 auto;
+.order dl dd .layui-form-select dl.layui-anim{
+	min-width:100%;
+	margin:0;
+	top:21px;
+}
+.order dl dd .layui-form-selectup dl.layui-anim{
+	top:auto;
+	bottom:17px;
+}
+.order dl dd .layui-form-select dl dd{
+	line-height:21px;
+}
+.order dl dd .layui-input,.order dl dd .layui-select{
+	height:19px;
+	line-height:19px;
+	border-color:#666;
 }
 .order dl dd.captcha img{
 	cursor:pointer;
 }
 .order .buy{
-	padding:8px 0 6px 0;
-	height:50px;
-	background:url(../images/buy.gif) no-repeat left center / 320px;
+	background:url(../images/buy.gif) no-repeat;
+	height:46px;
+}
+.order .buy2{
+	padding:8px 0 6px 20px;
+	height:30px;
+	line-height:30px;
+	font-size:24px;
+	background:#fc4400;
+	color:#FFF;
 }
 .order .new{
 	background:#F5FDB9;
@@ -106,13 +128,12 @@ select optgroup{
 	text-align:center;
 	font-size:13px;
 }
-.order .buy2{
-	padding:8px 0 6px 43px;
-	height:30px;
-	line-height:30px;
-	font-size:24px;
-	background:#fc4400 url(../images/cart.png) no-repeat scroll 5px center / 40px 40px;
-	color:#FFF;
+.order dl dd.info{
+	border:2px solid red;
+	text-align:center;
+	width:95%;
+	margin:10px auto 0 auto;
+	clear:both;
 }
 
 .tip{
