--- a/public/home/styles/Order5.css
+++ b/public/home/styles/Order5.css
@@ -31,9 +31,10 @@ select optgroup{
 	display:inline-block;
 	overflow:hidden;
 	cursor:pointer;
-}
-.order dl dd span.right label{
 	margin:0 10px 0 0;
+}
+.order dl dd.pro span.right label{
+	margin:0;
 }
 .order dl dd span.right span.total{
 	color:#666;
@@ -50,7 +51,7 @@ select optgroup{
 	box-shadow:0 1px 1px rgba(20,3,5,0.15);
 	cursor:pointer;
 }
-.order dl dd input.text,.order dl dd select,.order dl dd.textarea textarea{
+.order dl dd input.text,.order dl dd.textarea textarea{
 	background:#FFF;
 	border:1px solid #ccc;
 	border-radius:5px;
@@ -59,6 +60,7 @@ select optgroup{
 	text-indent:12px;
 	width:100%;
 	font-size:14px;
+	box-sizing:border-box;
 }
 .order dl dd input.text2{
 	background:#FFF;
@@ -70,8 +72,24 @@ select optgroup{
 	width:25%;
 	font-size:14px;
 }
-.order dl dd select{
-	text-indent:6px;
+.order dl dd .layui-form-select{
+	margin:0 0 5px 0;
+	width:100%;
+}
+.order dl dd .layui-form-select dl.layui-anim{
+	min-width:100%;
+	margin:0;
+	top:48px;
+}
+.order dl dd .layui-form-selectup dl.layui-anim{
+	top:auto;
+	bottom:44px;
+}
+.order dl dd .layui-input,.order dl dd .layui-select{
+	border-radius:5px;
+	height:46px;
+	line-height:46px;
+	border-color:#CCC;
 }
 .order dl dd.textarea textarea{
 	height:60px;
@@ -93,14 +111,21 @@ select optgroup{
 	box-shadow:0 1px 1px rgba(20,3,5,0.15);
 	border-radius:18px;
 }
+.order dl dd.sms_verify{
+	clear:both;
+}
+.order dl dd.sms_verify input.button{
+	color:#FFF;
+	cursor:pointer;
+	border:none;
+	padding:0 5px;
+	height:40px;
+	font-size:18px;
+	box-shadow:0 1px 1px rgba(20,3,5,0.15);
+	border-radius:18px;
+}
 .order dl dd.submit img{
 	cursor:pointer;
-}
-.order dl dd.info{
-	text-align:center;
-	width:95%;
-	margin:10px auto 0 auto;
-	clear:both;
 }
 .order .new{
 	line-height:24px;
@@ -118,6 +143,13 @@ select optgroup{
 }
 .order form.search dl dd.center{
 	font-size:20px;
+}
+.order dl dd.info{
+	border:2px solid red;
+	text-align:center;
+	width:95%;
+	margin:10px auto 0 auto;
+	clear:both;
 }
 
 .tip{
