--- a/public/admin/styles/TemplateStyle.css
+++ b/public/admin/styles/TemplateStyle.css
@@ -2,7 +2,7 @@
 .list table tr th.id{
 	width:80px;
 }
-.list table tr th.bg_color,.list table tr th.border_color,.list table tr th.button_color{
+.list table tr th.bg_color,.list table tr th.border_color,.list table tr th.button_color,.list table tr th.select_current_bg_color{
 	width:200px;
 }
 .list table tr th.date{
